# task-manager-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py  config.py  database.py  exceptions.py  logging_config.py  models.py  repository.py  service.py
static/: index.html
tests/: conftest.py  test_api.py  test_models.py  test_repository.py  test_service.py
