[project]
name = "gerenciador-de-tarefas"
version = "2.0.0"
description = "API REST e CLI para gerenciamento de tarefas, com persistência em SQLite."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
